force-app/main/default/objects/Case/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <formula>Text(Account.Industry)</formula>
    <label>Account Industry</label>
    <type>Text</type>
</CustomField>