force-app/main/default/objects/Case/fields/var1__c.field-meta.xml
<CustomField>
    <fullName>var1__c</fullName>
    <label>var1</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>