force-app/main/default/objects/Case/fields/var2__c.field-meta.xml
<CustomField>
    <fullName>var2__c</fullName>
    <label>var2</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>