force-app/main/default/objects/Case/validationRules/Change_from_New_to_Working.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_from_New_to_Working</fullName>
    <active>true</active>
    <description>Change the Status only from New to working</description>
    <errorConditionFormula>AND(
Not ispickval(Status,&apos;Working&apos;),
ispickval( PRIORVALUE(Status), &apos;New&apos;)
)</errorConditionFormula>
    <errorMessage>You can change the status to &apos;Working&apos; only</errorMessage>
</ValidationRule>