force-app/main/default/objects/Case/listViews/Hyderabad_Service_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Hyderabad_Service_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Hyderabad Service Queue</label>
    <queue>Hyderabad_Service_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>